--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Data Engineering Portfolio</title>
+  <title>Arthur Gagniare's Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
     <nav>
-      <h1 class="logo">Your Name</h1>
+      <h1 class="logo">Arthur Gagniare</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -22,32 +23,65 @@
   <main>
     <section id="about" class="section">
       <h2>About Me</h2>
-      <p>I'm a data engineering student specializing in data pipelines, ETL processes, and data visualization.</p>
+      <p>As an M2 student in Computer Science engineering majoring in Data Analytics at EFREI Paris, I am seeking a 6-month internship in Data Science. I enjoy tackling complex challenges in a team environment to deepen my knowledge while contributing my programming expertise, analytical skills, and strong teamwork abilities.</p>
     </section>
 
     <section id="skills" class="section">
       <h2>Skills</h2>
       <div class="skills-grid">
-        <div class="skill">Python</div>
+        <div class="skill">Python (pandas, numpy, matplotlib, sklearn, seaborn)</div>
         <div class="skill">SQL</div>
-        <div class="skill">ETL Tools</div>
-        <div class="skill">Data Visualization</div>
-        <div class="skill">Machine Learning Basics</div>
+        <div class="skill">HTML/CSS</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">Power BI / Excel</div>
+      </div>
+      <h3>Soft Skills</h3>
+      <div class="skills-grid">
+        <div class="skill">Autonomy</div>
+        <div class="skill">Teamwork</div>
+        <div class="skill">Communication</div>
+        <div class="skill">Analytical skills</div>
+        <div class="skill">Critical thinking</div>
       </div>
     </section>
 
     <section id="projects" class="section">
       <h2>Projects</h2>
       <div class="project">
-        <h3>Project 1: Data Pipeline</h3>
-        <p>A scalable data pipeline project with Python and SQL.</p>
-        <button onclick="openProject('projects/project1.html')">View Project</button>
+        <h3>DAuth Blockchain Project</h3>
+        <p>Developed a decentralized OAuth2 authentication solution using blockchain technology to enhance data privacy and enable secure, one-click user sign-ins.</p>
+      </div>
+      <div class="project">
+        <h3>Secu'Ring Project</h3>
+        <p>Modeled and created a connected ring with permissions management, controlled from an online server.</p>
+      </div>
+      <div class="project">
+        <h3>Advanced BI Case Study with Accenture</h3>
+        <p>Conducted an in-depth analysis of social and demographic data, developing Power BI dashboards for comprehensive visualization and insights.</p>
+      </div>
+    </section>
+
+    <section id="experience" class="section">
+      <h2>Experience</h2>
+      <div class="experience-item">
+        <h3>Data Analyst - BNP Paribas (2023/24)</h3>
+        <p>Managed SQL databases, data automation, API integration, and developed interactive dashboards for financial transactions monitoring in Asian markets.</p>
+      </div>
+      <div class="experience-item">
+        <h3>Communication & Administrative Assistant - LCM (2021)</h3>
+        <p>Handled invoice management, order registration, and multilingual communication tasks.</p>
+      </div>
+      <div class="experience-item">
+        <h3>EFREI MasterCamp (2023)</h3>
+        <p>Intensive 6-week project focusing on Python and database skills, developing a system for product feedback analysis and sentiment extraction.</p>
       </div>
     </section>
 
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p>Email: your-email@example.com</p>
+      <p>Email: <a href="mailto:arthur.gagniare@efrei.net">arthur.gagniare@efrei.net</a></p>
+      <p>Phone: +33 6 11 92 48 12</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/arthur-gagniare-6799761b6/" target="_blank">Arthur Gagniare</a></p>
     </section>
   </main>
 
