center skill / more space

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <div class="skills-grid">
         <div class="skill">Python (pandas, numpy, matplotlib, sklearn, seaborn)</div>
         <div class="skill">SQL</div>
-        <div class="skill">HTML/CSS</div>
-        <div class="skill">JavaScript</div>
+        <div class="skill">HTML / CSS / JS</div>
+        <div class="skill">Java</div>
         <div class="skill">Power BI / Excel</div>
       </div>
       <h3>Soft Skills</h3>
